.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Default to plonetheme.sunburst for new sites.
  [esteele]

- Allow email addresses as login name, with a switch on the security
  panel.  This is plip 9214:
  Refs http://dev.plone.org/plone/ticket/9214
  [maurits]

- Extend the language specific default configuration to set a reasonable first
  day of week on the calendar tool.
  [hannosch]

- Stop pretending to use GenericSetup's content import. As a last item we now
  create the translated front-page purely in imperative code. As a bonus we
  moved the body text of the front-page to a page template, so i18ndude can
  automatically extract it.
  [hannosch]

- Create and configure `Members` folder purely in setupPortalContent.
  [hannosch]

- Converted import and export steps XML files to use ZCML registrations.
  [hannosch]

- Made sure to have a complete list of non-installable profiles. No longer
  apply the filter to base profiles and ignore our default profile. This works
  in combination with the corresponding changes in quick installer to reduce
  portal creation time.
  [hannosch]

- Removed the wysiwyg_support.pt from Plone. It now lives inside the
  Products.Archetypes package.
  [hannosch]

- Make use of the new `authenticated` flag for ResourceRegistries entries 
  instead of specifying verbose condition expressions. 
  [hannosch]

- "Categories" are now "Tags", in line with common usage and terminology. 
  [limi]

- Changed workflow actor variable from user/getUserName to user/getId. 
  http://dev.plone.org/plone/ticket/7398.
  [hannosch]

- Removed the AT graphviz references action from all content types.
  [davisagli]

- Finished switching tool and action icons to use PNG format.
  [davisagli]

- Exclude some of the CMFDefault functionality, that isn't used or usable