@@ -8,8 +8,13 @@ Changelog
 4.0 - Unreleased
 ----------------
 
+- Added a mechanism for specifying profiles that are selected by default on
+  the add site form.  This should be kept in sync with PloneTestCase's list
+  of default extension profiles.
+  [davisagli]
+
 - Default to plonetheme.sunburst for new sites.
-  [esteele]
+  [esteele, davisagli]
 
 - Allow email addresses as login name, with a switch on the security
   panel.  This is plip 9214:
